--- a/vagrantfile
+++ b/vagrantfile
@@ -20,7 +20,7 @@ Vagrant.configure("2") do |config|
 
    db.vm.box = "ubuntu/bionic64"
 
-   db.vm.network "private_network", ip: "192.168.56.11"
+   db.vm.network "private_network", ip: "192.168.56.11" #ip
 
   end 
 
