--- a/vagrantfile
+++ b/vagrantfile
@@ -14,7 +14,7 @@ Vagrant.configure("2") do |config|
 
    web.vm.box = "ubuntu/bionic64"
 
-   web.vm.network "forwarded_port", guest: 80, host: 8080
+   web.vm.network "forwarded_port", guest: 80, host: 80
 
    web.vm.network "private_network", ip: "192.168.56.10" #ip
 
@@ -22,6 +22,8 @@ Vagrant.configure("2") do |config|
    web.vm.provision "shell", inline: <<-SHELL
    apt-get update
    apt-get install -y apache2
+   apt-get install php libapache2-mod-php php-mysql
+   apt-get systemctl restart -y apache2.service
    SHELL
   end
 
@@ -33,7 +35,9 @@ Vagrant.configure("2") do |config|
    #setting up provision block to create a script that will run the essential commands
    db.vm.provision "shell", inline: <<-SHELL
    apt-get update
-   #apt-get install -y <what goes here> 
+   apt-get upgrade
+   apt-get install -y mariadb-server 
+   apt-git clone https://github.com/datacharmer/test_db.git
    SHELL
 
   end 
