--- a/vagrantfile
+++ b/vagrantfile
@@ -22,8 +22,7 @@ Vagrant.configure("2") do |config|
    web.vm.provision "shell", inline: <<-SHELL
    apt-get update
    apt-get install -y apache2
-   apt-get install php libapache2-mod-php php-mysql
-   apt-get systemctl restart -y apache2.service
+   apt-get install -y php libapache2-mod-php php-mysql
    SHELL
   end
 
